--- a/Astro Nails/Views/Account/Index.cshtml
+++ b/Astro Nails/Views/Account/Index.cshtml
@@ -26,7 +26,7 @@
 
 <div class="btng">
  <div class="btngg">
-     <a class="buttong">На главную </a>  
+     <a class="buttong" href="~/">На главную </a>  
 
 
 
@@ -328,6 +328,7 @@ font-style: normal;
 font-weight: 500;
 font-size: 20px;
 line-height: 24px;
+text-decoration: none;
 
 color: #000000;
 
