--- a/Astro Nails/Views/Account/Index.cshtml
+++ b/Astro Nails/Views/Account/Index.cshtml
@@ -48,12 +48,13 @@
 
 </div>
 
-<div class="button1"> 
+@*<div class="button1"> 
 
      <td class="buttontext">@Html.ActionLink("Редактировать", "Edit", new { id = p.Id })</td>
-</div>
+</div>*@
+   
 
-<div class="button2">
+<div class="button1">
      <td class="button2text">@Html.ActionLink("Заказы", "Entry")</td>
   
 
