--- a/Astro Nails/Views/Master/Index.cshtml
+++ b/Astro Nails/Views/Master/Index.cshtml
@@ -2,11 +2,14 @@
 {
 	
 <div class="mainn">
-	<div class="asd">
-		<h2 class="text">Привет</h2
+    <div class="asd">
+        <a href="~/Master/Active">Только активные заказы</a>
+        <h2 class="text">
+            Привет
+        </h2>
         <h2 class="text2">Вот твои заказы:</h2>
 
-	</div>
+    </div>
 
 </div>
 <table class="table">
