--- a/Astro Nails/Views/Account/Entry.cshtml
+++ b/Astro Nails/Views/Account/Entry.cshtml
@@ -266,6 +266,8 @@
         line-height: 29px;
         text-align: center;
         color: #000000;
+        margin-top:15px;
+        padding-top:15px;
         /* Inside auto layout */
 
         flex: none;
