--- a/Astro Nails/Views/Home/About.cshtml
+++ b/Astro Nails/Views/Home/About.cshtml
@@ -3,3 +3,849 @@
 *@
 @{
 }
+  <body>
+     <div class="bg">
+
+    </div>    
+    <h1 class="logo">Astro Nails</h1>
+    <style type="text/css">
+        
+
+        .logo
+        {
+            
+            position: absolute;
+            left: 35%;
+            font-size: 80px;
+            color: purple;
+          
+            top: 20%;
+           animation: anim 1.9s forwards; 
+}
+    </style>
+    <a href="~/Home" class="btnnn">На главную</a>
+<div class="lll">
+      
+    </div>
+
+        <h2 class="text2">Новая просторная студия, новый эко-интерьер, новые направления услуг — мы выросли и создали место, где вам захочется остаться подольше. Угостим ваc свежесваренным кофе, вкусным чаем или бокалом белого вина. Расскажем, что сегодня в тренде, посоветуем классные средства для ухода, ответим на ваши вопросы о услугах</h2>
+
+        <div class="maintext">
+            <h2 class="qwe">Мы рядом </h2>
+
+        </div>
+
+        <div class="main">
+            <div class="elm1">
+
+                <div class="elm11"> 
+                    <div class="imgelm1"> </div>
+                    <div class="elm1maintext">
+                        <h2 class="imya">Лера Кисточкина  </h2>
+                        <h2 class="prof">Главный мастер </h2>
+
+                     </div>
+
+
+                </div>
+
+                <h2 class="textekm1">“Летом 2021 мы стали еще ближе Не просто помогаем создать ваш идеальный образ. Мы создаем атмосферу, где вы сможете по-настоящему расслабиться, зарядиться драйвом и найти вдохновение.” </h2>
+            </div>
+
+             <div class="elm2">
+
+                <div class="elm22"> 
+                    <div class="imgelm2"> </div>
+                    <div class="elm2maintext">
+                        <h2 class="imya2">Валерия Кирова </h2>
+                        <h2 class="prof2">Главный мастер </h2>
+
+                     </div>
+
+
+                </div>
+
+                <h2 class="textekm2">“Мы вас ждем.К кажому клиенту мы относимся индвидуально.Мы стараемся сделать не только качественно работу ,но и стать друзьями с вами.” </h2>
+            </div>
+
+
+
+            
+
+
+
+        </div>    
+        <div class="mainic">
+            <div class="z">
+                <div class="list">
+                    <div class="podlist">
+                        <div class="element1">
+                             <img src="https://sun9-55.userapi.com/s/v1/ig2/ZRIAXbxD4MBD7npwdc19QT0BBqyLRODplvuMgT9YbNSmoAY4NeJvvwcaiJgVAadG2ZbYWHIYDM8nCKSaJyYAaQ6_.jpg?size=2160x2160&quality=96&type=album" class="icon1">
+                            <h2 class="texticon1">Удобное расположение </h2>
+
+                        </div>
+                           <div class="element2">
+                            <img src="https://sun9-57.userapi.com/s/v1/ig2/hRe3wbAs9BFSelLGFd5JUY7FJ70tRsmZDLwEpbLj_5bO5DV0mCZIHaWUQogNZoePw7VkJegz7IeG5fWAefeI6fnE.jpg?size=2160x2160&quality=96&type=album" class="icon2">
+                            <h2 class="texticon2">Мы поможем и ответим на любой ваш вопрос </h2>
+
+                        </div>
+                        
+
+
+
+                    </div>
+                    <div class="list11">
+                        <img src="https://sun9-34.userapi.com/s/v1/ig2/PUM5PgsMd41fz9F_zMeMfU8xN68OAjCWZNO8XwEHwAefPl3sqkLGF0RUxOQc6O3ZNqS3u24sZgbMJxk1st4zDggi.jpg?size=2160x2160&quality=96&type=album" class="icon3">
+                      
+                        <div class="texticon3">Только сертицифицрованные специалисты </div>
+
+
+                    </div>
+
+                </div>
+
+                <div class="list2">
+                    <img src="https://sun9-82.userapi.com/s/v1/ig2/QlMaEyoKXC7H8uB8o7LmQcEan-qvBlgY-Jw7fxRjwv7-EvrQqA3D2p3rsH_TAbt99ZnK1USmZn0gaVj_PwSvruFz.jpg?size=2160x2160&quality=96&type=album" class="icon4">
+                    <div class="texticon4">Онлайн запись и ваш личный кабинет </div>
+
+                </div>
+
+            </div>
+
+
+        </div>
+
+        <div class="btn">
+            <a href="~/Order" class="btntxt">Записаться</a>
+
+        </div>
+
+     </div>
+     </body>
+<style>
+
+.lll
+{
+	display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 10px;
+gap: 10px;
+
+position: absolute;
+width: 210px;
+height: 98px;
+left: 855px;
+top: 75px;
+
+}
+.bg
+{
+	position: absolute;
+width: 1920px;
+height: 2814px;
+left: 0px;
+top: 0px;
+
+background: url(https://sun9-41.userapi.com/s/v1/ig2/NPnaPJPwwgXF1xnWeEV0YcfjTDqhsTYFmsnLqlQzO0K3vP6cH5am7q4nJ14R2tBHu86-yhUaZ9-k_yq2FZql2kvk.jpg?size=2560x1707&quality=96&type=album);
+opacity: 0.2;
+}
+
+.text1
+{
+	width: 190px;
+height: 78px;
+
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 500;
+font-size: 64px;
+line-height: 78px;
+/* identical to box height */
+
+
+color: #000000;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+.text2
+{
+
+  animation: ani 2.5s forwards;
+
+	position: absolute;
+width: 1607px;
+height: 192px;
+left: 204px;
+top: 367px;
+
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 400;
+font-size: 26px;
+line-height: 32px;
+
+color: #000000;
+}
+.maintext
+{
+	display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 10px;
+gap: 10px;
+
+position: absolute;
+width: 378px;
+height: 98px;
+left: 109px;
+top: 881px;
+}
+.maintext
+{
+display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 10px;
+gap: 10px;
+
+position: absolute;
+width: 378px;
+height: 98px;
+left: 109px;
+top: 881px;
+}
+.qwe
+{
+	width: 358px;
+height: 78px;
+
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 700;
+font-size: 64px;
+line-height: 78px;
+/* identical to box height */
+
+
+color: #000000;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+
+.main{
+	margin-top: 100px;
+	display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 0px;
+gap: 232px;
+
+position: absolute;
+width: 1720px;
+height: 300px;
+left: 100px;
+top: 1024px;
+
+
+}
+.elm1
+{
+	display: flex;
+flex-direction: column;
+align-items: center;
+padding: 0px;
+gap: 37px;
+
+width: 744px;
+height: 300px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+.elm11
+{
+	display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+gap: 24px;
+
+width: 744px;
+height: 135px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+}
+.textekm1
+{
+	width: 744px;
+height: 128px;
+
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 134.9%;
+/* or 32px */
+
+
+color: #000000;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+.imgelm1
+{
+width: 130px;
+height: 140px;
+
+
+background: url(https://sun9-65.userapi.com/s/v1/ig2/arCSGPRzJatgX65QN79tx7hYU7CcU7Gw52KRegTizbotqEuhHOJYAMrXIeaY5sr398VBEqRBgyTYmfjWV1iIeRGH.jpg?size=200x200&quality=96&type=album);
+border-radius: 87px;
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+.elm1maintext
+{
+	display: flex;
+flex-direction: column;
+align-items: center;
+padding: 0px;
+
+width: 259px;
+height: 75px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+.prof
+{
+	width: 200px;
+height: 32px;
+
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 134.9%;
+/* or 32px */
+
+
+color: #000000;
+
+opacity: 0.4;
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+
+.elm2
+{
+	display: flex;
+flex-direction: column;
+align-items: center;
+padding: 0px;
+gap: 37px;
+
+width: 744px;
+height: 300px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+.elm22
+{
+	display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+gap: 24px;
+
+width: 744px;
+height: 135px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+}
+.imgelm2
+{
+width: 130px;
+height: 140px;
+
+
+background: url(https://sun9-88.userapi.com/s/v1/ig2/RIWc1BxT5JFTZz6fYMpvegj1XHyYHpOcL3VGG9c6Go0llU8V4pTDPOrGyOCFKCABblDh-VbBd34bN1j0QAnVgD8e.jpg?size=200x200&quality=96&type=album);
+border-radius: 87px;
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+.elm2maintext
+{
+	display: flex;
+flex-direction: column;
+align-items: center;
+padding: 0px;
+
+width: 259px;
+height: 75px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+.imya2
+{
+	width: 259px;
+height: 43px;
+
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 400;
+font-size: 32px;
+line-height: 134.9%;
+/* or 43px */
+
+
+color: #000000;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+.prof2
+{
+	width: 200px;
+height: 32px;
+
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 134.9%;
+/* or 32px */
+
+
+color: #000000;
+
+opacity: 0.4;
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+.textekm2
+{
+	width: 744px;
+height: 128px;
+
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 134.9%;
+/* or 32px */
+
+
+color: #000000;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+
+.mainic
+{
+	display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 60px 148px 60px 60px;
+gap: 10px;
+
+position: absolute;
+width: 1212px;
+height: 603px;
+left: 56px;
+top: 1502px;
+
+border-radius: 18px;
+}
+.z
+{
+	display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 0px;
+gap: 54px;
+
+width: 1050px;
+height: 483px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+.list
+{
+	display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+padding: 0px;
+gap: 54px;
+
+width: 1050px;
+height: 348px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+}
+.list2
+{
+	display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+gap: 144px;
+
+width: 1050px;
+height: 81px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+.podlist
+{
+	display: flex;
+flex-direction: column;
+align-items: center;
+padding: 0px;
+gap: 54px;
+
+width: 1050px;
+height: 214px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+}
+.element1
+{
+	display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+gap: 144px;
+
+width: 1050px;
+height: 80px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+}
+.icon1
+{
+	width: 80px;
+height: 80px;
+
+background: url(perspective_12matte.png);
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+.texticon1
+{
+	width: 302px;
+height: 29px;
+
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 29px;
+
+color: #000000;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+.element2
+{
+	display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+gap: 144px;
+
+width: 1050px;
+height: 80px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+align-self: stretch;
+flex-grow: 0;
+}
+.icon2
+{
+	width: 80px;
+height: 80px;
+
+background: url(perspective_matte.png);
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+.texticon2
+{
+	width: 764px;
+height: 29px;
+
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 29px;
+
+color: #000000;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+.list11
+{
+	display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+gap: 144px;
+
+width: 1050px;
+height: 80px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+align-self: stretch;
+flex-grow: 0;
+}
+.icon3
+{
+width: 80px;
+height: 80px;
+
+background: url(aaa.png);
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+.texticon3
+{
+	width: 861px;
+height: 29px;
+
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 29px;
+
+color: #000000;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+.icon4
+{
+	width: 81px;
+height: 81px;
+
+background: url(zxc.png);
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+.texticon4
+{
+	width: 826px;
+height: 29px;
+
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 29px;
+
+color: #000000;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+.btn
+{display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 24px 92px;
+gap: 10px;
+
+position: absolute;
+width: 350px;
+height: 70px;
+left: 1155px;
+top: 1751px;
+
+/* Gray 6 */
+
+background: #F2F2F2;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 14px;
+}
+.btntxt
+{
+	width: 144px;
+height: 29px;
+
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 500;
+font-size: 24px;
+line-height: 29px;
+
+color: #000000;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+.btnnn
+{
+    
+	position: absolute;
+	bottom: 790px;
+	left: 35px;
+	font-size: 19px;
+	text-align: center;
+	color: whitesmoke;
+	margin: 40px;
+	
+	border-radius: 12px;
+	width: 150px;
+	height:45px;
+	background-color: #5d1355;
+	text-decoration: none;
+
+}</style>
