--- a/Astro Nails/Views/Home/Service.cshtml
+++ b/Astro Nails/Views/Home/Service.cshtml
@@ -3,3 +3,211 @@
 *@
 @{
 }
+  
+<div class="background1"></div>
+<div class="background2">
+
+<div class="table1">
+<a href="~/Home" class="btn">На главную</a>
+<div class="text1">Наши услуги</div>
+<table class="iksweb">
+    <tbody>
+        <th>
+            <th colspan="4"></th>
+            <th>Руководитель</th>
+            <th>Топ мастер</th>
+            <th>Мастер</th>
+        </th>
+        <tr>
+            <td colspan="4">Маникюр с однотонным покрытием гель лак</td>
+            <td></td>
+            <td>1300</td>
+            <td>1200</td>
+                <td>1000</td>
+        </tr>
+        <tr>
+            <td colspan="4">Маникюр с пудровым покрытием</td>
+               <td></td>
+            <td>1300</td>
+            <td>1200</td>
+                <td>1000</td>
+        </tr>
+        <tr>
+            <td colspan="4">Маникюр без покрытия</td>
+            <td></td>
+            <td>800</td>
+            <td>600</td>
+               <td>300</td>
+       
+        </tr>
+        <tr>
+            <td colspan="4">Педикюр с покрытем</td>
+            <td></td>
+            <td>1400</td>
+            <td>1200</td>
+              <td>X</td>
+        </tr>
+         <tr>
+            <td colspan="4">Однотонное наращивание ногтей</td>
+            <td></td>
+            <td>2000</td>
+            <td>1700</td>
+              <td>1300</td>
+        </tr>
+    </tbody>
+</table>
+</div>
+
+<div class="elm2">
+
+<div class="desighntext"> Дизайн </div>
+
+<table class="iksweb1">
+    <tbody>
+        <tr>
+            <th colspan="2">Все ногти</th>
+            <td colspan="3"></td>
+        </tr>
+        <tr>
+            <td colspan="2">Втирка, аэрография, френч</td>
+            <td colspan="3">300р</td>
+        </tr>
+        <tr>
+            <td colspan="2">На ногах</td>
+            <td colspan="3">200р</td>
+        </tr>
+        <tr>
+            <th colspan="2">Цена за ноготь</th>
+            <td colspan="3"></td>
+        </tr>
+        <tr>
+            <td colspan="2">Фольга,стемпинг,слайдер,втирка</td>
+            <td colspan="3">50р</td>
+        </tr>
+        <tr>
+            <td colspan="2">Аэрография</td>
+            <td colspan="3">50р</td>
+        </tr>
+        <tr>
+            <td colspan="2">Градиент кистью</td>
+            <td colspan="3">100р</td>
+        </tr>
+    </tbody>
+</table>
+</div>
+
+</div></div></div></div>
+<style>
+table.iksweb{
+	position: absolute;
+
+	background-color: white;
+
+    border-radius:6px;
+left: 5%;
+text-decoration: none;
+border-collapse:collapse;
+width:90%;text-align:left;}
+	table.iksweb th{font-weight:bold;font-size:22px; color:white;background-color:#5d1355; text-align: left;}
+	table.iksweb td{font-size:19px;color:#5d1355; text-align: left;}
+	table.iksweb td,table.iksweb th{white-space:pre-wrap;padding:22px 11px;line-height:15px;vertical-align: middle;border: 0px solid #354251;}	table.iksweb tr:hover{background-color:#f9fafb}
+	table.iksweb tr:hover td{color:#cbcf15;cursor:default;}
+	.table1
+	{
+		border-radius: 8px;
+	}
+table.iksweb1{
+		background-color: white;
+
+	position: absolute;
+left: 22%;
+	top: 750px;
+width:60%;
+
+	border-collapse:collapse;
+	border-spacing:0;
+	height: auto;
+	text-decoration: none;
+}
+	table.iksweb1 td,table.iksweb1 th{white-space:pre-wrap;
+		padding:22px 22px;
+		line-height:15px;
+		vertical-align: middle;
+		border: 0px solid #354251;
+		font-size: 20px;
+	}	
+	table.iksweb tr:hover{background-color:#f9fafb}
+	
+}
+table.iksweb1 td,table.iksweb1 th {
+	padding: 3px;
+	width: 30px;
+	height: 35px;
+}
+table.iksweb1 th {
+	
+	color: #5d1355;
+padding:10px; 
+	font-weight: regular;
+        font-size:32px;
+text-align:left;
+}
+.desighntext
+{
+	position: absolute;
+	width: 83px;
+height: 654px;
+	top: 600px;
+	left: 45%;
+
+
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 500;
+	font-size: 45px;
+line-height: 117px;
+text-align: center;
+
+color: #000000;
+
+}
+
+.background2
+{
+	border-radius: 24px;
+	position: absolute;
+	width: 80%;
+	height: 150%;
+	left: 10%;
+	background-color: white;
+}
+
+body
+{
+	background: url(07.jpg);
+}
+.text1
+{
+	margin-top: 50px;
+	font-size: 45px;
+	text-align: center;
+	margin: 40px;
+}
+
+.btn
+{
+	position: absolute;
+	bottom: 1300px;
+	left: 35px;
+	font-size: 19px;
+	text-align: center;
+	color: whitesmoke;
+	margin: 40px;
+	
+	border-radius: 12px;
+	width: 150px;
+	height:45px;
+	background-color: #5d1355;
+	text-decoration: none;
+}
+</style>
