--- a/Astro Nails/Views/Master/Index.cshtml
+++ b/Astro Nails/Views/Master/Index.cshtml
@@ -3,11 +3,12 @@
 	
 <div class="mainn">
     <div class="asd">
-        <a href="~/Master/Active">Только активные заказы</a>
+       
         <h2 class="text">
             Привет
         </h2>
-        <h2 class="text2">Вот твои заказы:</h2>
+        <h2 class="text2">Вот твои заказы</h2>
+		 <a href="~/Master/Active">Посмотреть только активные заказы</a>
 
     </div>
 
