--- a/Astro Nails/Views/Order/Index.cshtml
+++ b/Astro Nails/Views/Order/Index.cshtml
@@ -5,7 +5,26 @@
     <form asp-action="Index" asp-controller="Order" asp-anti-forgery="true">
 
     
- 
+     <a href="~/Home" class="btnnn">На главную</a>
+     <style>
+         .btnnn
+         {
+                  position: absolute;
+	bottom: 800px;
+	left: 35px;
+	font-size: 19px;
+	text-align: center;
+	color: whitesmoke;
+	margin: 40px;
+	
+	border-radius: 12px;
+	width: 150px;
+	height:45px;
+	background-color: #5d1355;
+	text-decoration: none;
+         }
+
+     </style>
       
      <div class="text">
 
