--- a/Astro Nails/Views/Admin/Index.cshtml
+++ b/Astro Nails/Views/Admin/Index.cshtml
@@ -1,10 +1,125 @@
 ﻿@using (Html.BeginForm())
 {
-    <td>@Html.ActionLink("Добавить мастера", "Create")</td>
-    <a href="~/Service">Просмотр услуг</a>
-    <a href="~/Master">Просмотр заказов</a>
 
+    <a href="~/Home" class="btnnn">На главную</a>
+    <div class="menu">
+       
+    <a class="txttri3" href="~/Create">Просмотр услуг </a>
+ 
+  @*  <div class="txtone1">*@
+    <a class="txtone1" href="~/Service">Просмотр услуг </a>
+  @*  </div>*@
+   @* <div class="txttwo2"> *@ <a class="txttwo2" href="~/Master">Просмотр заказов</a> @*</div>*@
+  
 
+    </div>
+    <style>
+        .btnnn
+{
+ position: absolute;
+	bottom: 800px;
+	left: 35px;
+	font-size: 19px;
+	text-align: center;
+	color: whitesmoke;
+	margin: 40px;
+	
+	border-radius: 12px;
+	width: 150px;
+	height:45px;
+	background-color: #5d1355;
+	text-decoration: none;
+
+}
+        .menu
+        {
+            /* Auto layout */
+              box-sizing: border-box;
+display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 35px 64px;
+gap: 52px;
+
+position: absolute;
+width: 851px;
+height: 104px;
+left: 475px;
+top: 38px;
+
+border: 1px solid #000000;
+filter: drop-shadow(1px 4px 4px rgba(0, 0, 0, 0.27));
+border-radius: 12px;
+        }
+      
+        .txtone1
+        {
+            display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 5px 9px;
+gap: 10px;
+
+width: 179px;
+height: 34px;
+
+background: #bc8aba;
+border-radius: 12px;
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+color:white;
+text-decoration:none;
+        }
+        .txttwo2
+        {
+            display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 5px 9px;
+gap: 10px;
+
+width: 179px;
+height: 34px;
+
+background:#bc8aba;
+border-radius: 12px;
+
+/* Inside auto layout */
+
+flex: none;
+order: 2;
+flex-grow: 0;
+color:white;
+text-decoration:none;
+        }
+        .txttri3
+        {
+            color:white;
+text-decoration:none;
+            display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 5px 9px;
+gap: 10px;
+
+width: 179px;
+height: 34px;
+
+background:#bc8aba;
+border-radius: 12px;
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+        }
+
+    </style>
     <table class="table">
         <thead>
             <tr>
@@ -45,7 +160,7 @@
     .table {
         width: 100%;
         border: none;
-        margin-bottom: 20px;
+        margin-top: 200px;
         border-collapse: separate;
     }
 
