--- a/Astro Nails/Views/Home/Index.cshtml
+++ b/Astro Nails/Views/Home/Index.cshtml
@@ -20,9 +20,17 @@
     
     <a href="~/Account" class="authorizbutton">Профиль</a>
     <form method="post" asp-controller="Account" asp-action="Logout">
-        <input type="submit" value="Выход" />
+        <input class="btnlog" type="submit" value="Выход" />
     </form>
 </div>
+<style>
+	.btnlog
+	{
+		background-color:white;
+		margin-top:30px;
+	}
+
+</style>
 }
  else
 {
@@ -30,8 +38,7 @@
     <a href="~/Account/Login" class="authorizbutton">  Авторизоваться </a>
 </div>
 }
-     
-
+   
 
 <div class="maintext">
  <h1 class="maintexttxt"> Создай свой идеальный образ</h1> </div>
@@ -53,7 +60,10 @@
 
    
 
-   <div class="back2"> </div>
+   <div class="back2">
+	    
+  
+</div>
 @*
    <div class="hands1  ">   <img src="https://disk.yandex.ru/client/disk?idApp=client&dialog=slider&idDialog=%2Fdisk%2Fhands2.svg">  </div>
 
@@ -85,6 +95,13 @@
 
 
 <div class="back3">
+	 <div class="footer">
+		
+			      <a href="~/Master" class="btn1">Мастеру</a>
+
+          <a href="~/Admin" class="btn2">Администратору</a>
+		
+	</div>
 <div class="nogti">
     </div>
 
@@ -136,9 +153,31 @@
     <div class="buttonmain3"> <a href="~/Order" class="button3">Записаться</a></div>
 
 
-
+	
  </div>
+	
  <style>
+	 .footer
+	 {
+		 position:absolute;
+		 bottom:1px;
+		 width:100%;
+		 height:60px;
+		 background:#fff;
+
+	 }
+	 .btn1m
+	 {
+	 margin-left:50%;
+
+	 }
+	 .btn1a
+	 {
+		 margin-left:50%;
+		 margin-top:50px;
+	 }
+
+
  .mainlist
 {
 	position: absolute;
