--- a/Astro Nails/Views/Shared/_Layout.cshtml
+++ b/Astro Nails/Views/Shared/_Layout.cshtml
@@ -19,5 +19,31 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    <footer>
+   
+
+    </footer>
 </body>
 </html>
+<style>
+
+.footer {
+
+  position:absolute;
+
+  bottom:0;
+  padding:60px;
+  left:0;
+
+  width:100%;
+
+  height: 90px;
+
+  background-color: white;
+
+}
+.btn2
+{
+    padding:30px
+}
+</style>
