--- a/Astro Nails/Views/Admin/All.cshtml
+++ b/Astro Nails/Views/Admin/All.cshtml
@@ -2,16 +2,96 @@
 
 @using (Html.BeginForm())
 {
-    foreach (var p in Model)
-    {
-        @p.DateTime_Order
-        <br />
-        @p.ClientPhone
-        <br />
-        @Html.DisplayFor(modelItem => p.User.Name)
-        <br />
-        @Html.DisplayFor(modelItem => p.User.Surname)
-        @Html.DisplayFor(modelItem => p.User.Patronomic)
-        @Html.DisplayFor(modelItem => p.Service.Name)
-    }
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Время</th>
+                <th>Номер телефона</th>
+                <th>Фамилия</th>
+                <th>Имя</th>
+                <th>Отчество</th>
+                <th>Название услуги</th>
+                <th>Статус</th>
+                <th></th>
+
+            </tr>
+
+
+        </thead>
+        @foreach (var p in Model)
+        {
+
+            <tbody>
+                <tr>
+                    <td>@p.DateTime_Order</td>
+                    <td>@p.ClientPhone</td>
+                    <td>@p.User.Surname</td>
+                    <td>@p.User.Name</td>
+                    <td>@p.Patronomic</td>
+                    <td>@p.Service.Name</td>
+                    <td>@p.Service_State</td>
+                    <td>@Html.ActionLink("Удалить", "DeleteAll", new { id = p.Id })</td>
+                </tr>
+            </tbody>
+        }
+    </table>
 }
+
+<style>
+    .table {
+        width: 100%;
+        border: none;
+        margin-bottom: 20px;
+        border-collapse: separate;
+    }
+
+        .table thead th {
+            font-weight: bold;
+            text-align: left;
+            border: none;
+            padding: 10px 15px;
+            background: #EDEDED;
+            font-size: 14px;
+            border-top: 1px solid #ddd;
+        }
+
+        .table tr th:first-child, .table tr td:first-child {
+            border-left: 1px solid #ddd;
+        }
+
+        .table tr th:last-child, .table tr td:last-child {
+            border-right: 1px solid #ddd;
+        }
+
+        .table thead tr th:first-child {
+            border-radius: 20px 0 0 0;
+        }
+
+        .table thead tr th:last-child {
+            border-radius: 0 20px 0 0;
+        }
+
+        .table tbody td {
+            text-align: left;
+            border: none;
+            padding: 10px 15px;
+            font-size: 14px;
+            vertical-align: top;
+        }
+
+        .table tbody tr:nth-child(even) {
+            background: #F8F8F8;
+        }
+
+        .table tbody tr:last-child td {
+            border-bottom: 1px solid #ddd;
+        }
+
+            .table tbody tr:last-child td:first-child {
+                border-radius: 0 0 0 20px;
+            }
+
+            .table tbody tr:last-child td:last-child {
+                border-radius: 0 0 20px 0;
+            }
+</style>
