--- a/Astro Nails/Views/Admin/Index.cshtml
+++ b/Astro Nails/Views/Admin/Index.cshtml
@@ -4,7 +4,7 @@
     <a href="~/Home" class="btnnn">На главную</a>
     <div class="menu">
        
-    <a class="txttri3" href="~/Create">Просмотр услуг </a>
+    <a class="txttri3" href="~/Admin/Create">Добавить мастера </a>
  
   @*  <div class="txtone1">*@
     <a class="txtone1" href="~/Service">Просмотр услуг </a>
